#-------------------------------------------------------------------------------
# mcpp
#-------------------------------------------------------------------------------
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

FILE(GLOB SRC "*.c")
FILE(GLOB HEAD1 "*.h")
FILE(GLOB HEAD2 "*.H")
SOURCE_GROUP("mcpp" FILES ${SRC} ${HEAD1} ${HEAD2})
LIST(APPEND CODE ${SRC} ${HEAD1} ${HEAD2})

if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  ADD_DEFINITIONS(-DCOMPILER=CLANG)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  ADD_DEFINITIONS(-DCOMPILER=GNUC)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
  ADD_DEFINITIONS(-DCOMPILER=MSC)
endif()

IF(MSVC)
	ADD_DEFINITIONS(/W0 -DSYSTEM=SYS_WIN)
ELSEIF(UNIX)
	ADD_DEFINITIONS(-w -DSYSTEM=SYS_UNIX)
ELSEIF(APPLE)
	ADD_DEFINITIONS(-w -DSYSTEM=SYS_MAC)
ENDIF()
ADD_DEFINITIONS(-DMCPP_LIB)

ADD_LIBRARY(mcpp STATIC ${CODE})
